--- a/.gitignore
+++ b/.gitignore
@@ -19,27 +19,26 @@ wheels/
 *.egg-info/
 .installed.cfg
 *.egg
-.pytest_cache/
-.coverage
-htmlcov/
 .env
 venv/
+ENV/
 
-# Node
+# Node.js
 node_modules/
-coverage/
-build/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
 .env.local
 .env.development.local
 .env.test.local
 .env.production.local
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
 
 # IDE
 .idea/
 .vscode/
 *.swp
 *.swo
-.DS_Store 
+
+# OS
+.DS_Store
+Thumbs.db 
